--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "electron-updater": "^5.3.0",
     "express": "^4.21.2",
+    "git": "^0.1.5",
     "lfs": "^0.0.4",
     "serve-index": "^1.9.1"
   },
